--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Manually Added
+data/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +106,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.vscode/settings.json
